--- a/book-recommender/package.json
+++ b/book-recommender/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "16.4.7",
     "express": "^4.21.2",
     "pg": "^8.13.1",
     "react": "^18.3.1",
