--- a/book-recommender/package.json
+++ b/book-recommender/package.json
@@ -16,11 +16,11 @@
     "concurrently": "9.1.2",
     "cors": "^2.8.5",
     "dotenv": "16.4.7",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "openai": "^4.80.0",
-    "pg": "8.13.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "pg": "8.13.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
